[package]
name = "oss"
version = "0.3.0"
authors = ["Hatter Jiang <jht5945@gmail.com>"]
edition = "2018"
description = "Simple Alibaba Cloud OSS Client in Rust"
license = "MIT"
readme="README.md"
repository = "https://git.hatter.ink/hatter/simple-oss"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
urlencoding = "1.0.0"
base64 = "0.11.0"
reqwest = "0.10.0"
rust_util="0.2.0"
json = "0.12.0"
